--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header> <h1>Michael Sheliga's Timed JavaScript Quiz </h1></header>
-    <button id="viewHighScoresButton"> Index.html button </button>
+    <!-- <button id="viewHighScoreButton"> Index.html button </button> --> 
     <hr>
     <main id="main"> </main>
     <script src="./assets/scripts/script.js"></script>
