Got enter score and display score working.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <!-- MJS 12.9.23 URI Challenge 4, Dynamic Javascript Timed Quiz with Scores -->
 
-
 <body>
-    <header> <h1>Michael Sheliga's Timed JavaScript Quiz </h1></header>
+    <header> <h3>Michael Sheliga's Timed JavaScript Quiz - URI Challenge 4 </h3></header>
     <!-- <button id="viewHighScoreButton"> Index.html button </button> --> 
     <hr>
     <main id="main"> </main>
